同步MMM-TClient的远程控制改进功能
主要新增功能：
- 显示器控制优化：单按钮切换模式（替代双按钮）
- 窗口最小化/恢复功能：新增minimize按钮
- 面包屑导航：显示当前菜单层级
- 更新通知小红点：呼吸灯效果提示更新
- 垃圾清理功能：一键清理系统临时文件
- 系统监控增强：优化存储显示和进程过滤
- 停止MagicMirror按钮：独立功能按钮
- 配置加载器集成：支持子项目配置管理

Bug修复：
- 修复显示器控制递归调用问题
- 修复窗口状态同步问题（使用自维护状态）
- 修复Socket连接初始化顺序
- 修复更新检查Git路径错误
- 清理调试代码，优化代码结构

统计：
- 4个文件修改
- +781行新增，-176行删除
- remote.js: 2214→2511行（+297行）

--- a/remote.html
+++ b/remote.html
@@ -27,10 +27,6 @@
       type="text/css"
       href="modules/MMM-TMM-Control/remote.css"
     />
-    <link
-      rel="apple-touch-icon"
-      href="modules/MMM-TMM-Control/img/apple-touch-icon.png"
-    />
     <meta name="apple-mobile-web-app-title" content="MagicRemote" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -44,7 +40,11 @@
   <body>
     <div class="container normal fill">
       <div id="module_1_MMM-TMM-Control" class="fill">
-        <header class="header">%%TRANSLATE:TITLE%%</header>
+        <header class="header">
+          <span id="breadcrumb-home" class="breadcrumb-item">%%TRANSLATE:TITLE%%</span>
+          <span id="breadcrumb-separator" class="breadcrumb-separator hidden"> >> </span>
+          <span id="breadcrumb-current" class="breadcrumb-item hidden"></span>
+        </header>
         <div class="main-content-wrapper">
           <div class="control-panel-left">
           <div class="menu above-fold">
@@ -262,6 +262,7 @@
               >
                 <span class="fa fa-fw fa-toggle-up" aria-hidden="true"></span>
                 <span class="text">%%TRANSLATE:UPDATE_MENU_NAME%%</span>
+                <span id="update-notification-dot" class="notification-dot hidden"></span>
                 <span class="fa fa-fw fa-angle-right" aria-hidden="true"></span>
               </div>
               <div
@@ -305,6 +306,13 @@
                 <span class="text">%%TRANSLATE:RESTARTMM%%</span>
               </div>
               <div
+                id="stop-mm-button"
+                class="menu-element hidden button power-menu"
+              >
+                <span class="fa fa-fw fa-stop-circle" aria-hidden="true"></span>
+                <span class="text">%%TRANSLATE:STOPMM%%</span>
+              </div>
+              <div
                 id="refresh-mm-button"
                 class="menu-element hidden button power-menu"
               >
@@ -312,35 +320,10 @@
                 <span class="text">%%TRANSLATE:REFRESHMM%%</span>
               </div>
               <div
-                id="monitor-on-button"
+                id="monitor-toggle-button"
                 class="menu-element hidden button power-menu"
               >
-                <span class="stack fa-fw">
-                  <span
-                    class="fa fa-fw fa-television outer-label fa-stack-1x"
-                    aria-hidden="true"
-                  ></span>
-                  <span
-                    class="fa fa-fw fa-check inner-monitor-label fa-stack-1x"
-                    aria-hidden="true"
-                  ></span>
-                </span>
-                <span class="text">%%TRANSLATE:MONITORON%%</span>
-              </div>
-              <div
-                id="monitor-off-button"
-                class="menu-element hidden button power-menu"
-              >
-                <span class="stack fa-fw">
-                  <span
-                    class="fa fa-fw fa-television outer-label fa-stack-1x"
-                    aria-hidden="true"
-                  ></span>
-                  <span
-                    class="fa fa-fw fa-close inner-monitor-label fa-stack-1x"
-                    aria-hidden="true"
-                  ></span>
-                </span>
+                <span class="fa fa-fw fa-television" aria-hidden="true"></span>
                 <span class="text">%%TRANSLATE:MONITOROFF%%</span>
               </div>
               <div
@@ -541,6 +524,10 @@
             <div class="system-detail-header">
               <span id="system-detail-back" class="fa fa-fw fa-angle-left"></span>
               <span class="system-detail-title" id="system-detail-title">详情</span>
+              <button class="cleanup-trash-button hidden" id="cleanup-trash-btn">
+                <span class="fa fa-trash"></span>
+                <span class="cleanup-text">清理垃圾</span>
+              </button>
             </div>
             <div class="system-detail-content" id="system-detail-content">
               <div class="loading">加载中...</div>
